# ConvexCopier

./: README.md  pom.xml
common/: pom.xml
common/src/main/java/com/orangebyte256/convexcopier/common/: Convex.java  Line.java  Point.java  Polygon.java  Utils.java
common/src/test/java/com/orangebyte256/convexcopier/common/: ConvexTest.java  LineTest.java  PointTest.java  PolygonTest.java  UtilsTest.java
example/: complex.txt  coords.txt  face.txt  sun.txt
fill-polygon-impl/: pom.xml
fill-polygon-impl-cpp/: CMakeLists.txt  FillPolygonImpl.cpp  FillPolygonImpl.h  FillPolygonJNI.cpp  FillPolygonJNI.h  Line.cpp  Point.cpp  Point.h
fill-polygon-impl-cpp/src/: CMakeLists.txt  FillPolygonImpl.cpp  FillPolygonJNI.cpp  Line.h  Point.h  fillpolygonimpl.cpp  fillpolygonimpl.h  fillpolygonjni.cpp  fillpolygonjni.h  line.cpp  line.h  point.cpp  point.h  tests.cpp
fill-polygon-impl/src/main/java/com/orangebyte256/convexcopier/fillpolygonimpl/: FillPolygonImpl.java
fill-polygon-impl/src/test/java/com/orangebyte256/convexcopier/fillpolygonimpl/: FillPolygonImplTest.java
image-editor/: pom.xml
image-editor/data/: test0.ser  test1.ser  test2.ser
image-editor/src/main/java/com/orangebyte256/convexcopier/imageeditor/: ImageEditor.java  PointCreator.java
image-editor/src/test/java/com/orangebyte256/convexcopier/imageeditor/: ImageEditorTest.java
src/: Convex.java  ImageEditor.java  ImageUtils.java  Line.java  Main.java  PointCreator.java
src/main/java/com/orangebyte256/convexcopier/common/: Convex.java  ImageUtils.java  Line.java  Point.java  Utils.java
src/main/java/com/orangebyte256/convexcopier/convexcopier/: ImageEditor.java  Main.java
src/main/java/com/orangebyte256/convexcopier/pointcreator/: PointCreator.java
src/test/java/com/orangebyte256/convexcopier/common/: ConvexTest.java  LineTest.java
src/test/java/com/orangebyte256/convexcopier/convexcopier/: ImageEditorTest.java
